@@ -1,14 +1,14 @@
-:-	include(pl2wam).
-:-	include(read_file).
-:-	include(bip_list).
-:-	include(syn_sugar).
-:-	include(internal).
-:-	include(code_gen).
-:-	include(reg_alloc).
-:-	include(inst_codif).
-:-	include(first_arg).
-:-	include(indexing).
-:-	include(wam_emit).
+:-	include('read_file.pl').
+:-	include('bip_list.pl').
+:-	include('syn_sugar.pl').
+:-	include('internal.pl').
+:-	include('code_gen.pl').
+:-	include('reg_alloc.pl').
+:-	include('inst_codif.pl').
+:-	include('first_arg.pl').
+:-	include('indexing.pl').
+:-	include('wam_emit.pl').
+:-	include('pl2wam.pl').
 
 /*
 
